# saleor_external_auth_plugin_old

./: README.md  pyproject.toml
social_auth/: auth.py  constants.py  plugin.py  types.py  utils.py
